breakdown of building counts by borough

--- a/numbldgs 2020-03/notebooks/NumBldgs from Building Footprints.ipynb
+++ b/numbldgs 2020-03/notebooks/NumBldgs from Building Footprints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,12 +167,104 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Find lots where building footprints does not have the same number of buildings as PLUTO."
+    "Create a dataframe containing NUMBLDGS for all PLUTO records for future queries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bbl</th>\n",
+       "      <th>borough</th>\n",
+       "      <th>numbldgs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3008340046</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4040420106</td>\n",
+       "      <td>QN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3046790017</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3078310006</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3078310007</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          bbl borough  numbldgs\n",
+       "0  3008340046      BK         1\n",
+       "1  4040420106      QN         2\n",
+       "2  3046790017      BK         2\n",
+       "3  3078310006      BK         1\n",
+       "4  3078310007      BK         1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto = pd.read_sql_query('''SELECT CAST(bbl AS TEXT), borough, numbldgs FROM dcp.pluto201;''', cnx)\n",
+    "pluto.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find lots where building footprints does not have the same number of buildings as PLUTO."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +387,7 @@
        "4          81  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +440,7 @@
        "20673"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +467,7 @@
        "16616"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +495,7 @@
        "4057"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +629,7 @@
        "10      09    151   Open Space and Outdoor Recreation"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +856,7 @@
        "23         J      6                                Theatres"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +953,7 @@
        "4      MN    734"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +1094,7 @@
        "[122 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1125,7 @@
        "Name: difference, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1145,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1079,16 +1171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x12cef4890>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x12d2e08d0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1108,6 +1200,415 @@
    "source": [
     "sns.distplot(difference_dist['difference'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is the total number of buildings recorded on PLUTO today?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1097048"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto[\"numbldgs\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4531"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"difference\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1101579"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto[\"numbldgs\"].sum() + df[\"difference\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bbl</th>\n",
+       "      <th>borough</th>\n",
+       "      <th>numbldgs</th>\n",
+       "      <th>difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3008340046</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4040420106</td>\n",
+       "      <td>QN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3046790017</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3078310006</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3078310007</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          bbl borough  numbldgs  difference\n",
+       "0  3008340046      BK         1         0.0\n",
+       "1  4040420106      QN         2         0.0\n",
+       "2  3046790017      BK         2         0.0\n",
+       "3  3078310006      BK         1         0.0\n",
+       "4  3078310007      BK         1         0.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto = pd.merge(pluto, df[['bbl','difference']], how='left', on='bbl').fillna(0)\n",
+    "pluto.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bbl</th>\n",
+       "      <th>borough</th>\n",
+       "      <th>numbldgs</th>\n",
+       "      <th>difference</th>\n",
+       "      <th>new_numbldgs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>3008340046</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>4040420106</td>\n",
+       "      <td>QN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3046790017</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3078310006</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>3078310007</td>\n",
+       "      <td>BK</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          bbl borough  numbldgs  difference  new_numbldgs\n",
+       "0  3008340046      BK         1         0.0           1.0\n",
+       "1  4040420106      QN         2         0.0           2.0\n",
+       "2  3046790017      BK         2         0.0           2.0\n",
+       "3  3078310006      BK         1         0.0           1.0\n",
+       "4  3078310007      BK         1         0.0           1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pluto['new_numbldgs'] = pluto['numbldgs'] + pluto['difference']\n",
+    "pluto.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "borough\n",
+       "BK    337889\n",
+       "BX    106361\n",
+       "MN     46464\n",
+       "QN    467159\n",
+       "SI    139175\n",
+       "Name: numbldgs, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "borough_numbldgs = pluto.groupby(['borough'])['numbldgs'].agg('sum')\n",
+    "borough_numbldgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "borough\n",
+       "BK    341562.0\n",
+       "BX    106970.0\n",
+       "MN     46869.0\n",
+       "QN    470572.0\n",
+       "SI    135606.0\n",
+       "Name: new_numbldgs, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "borough_new_numbldgs = pluto.groupby(['borough'])['new_numbldgs'].agg('sum')\n",
+    "borough_new_numbldgs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>numbldgs</th>\n",
+       "      <th>new_numbldgs</th>\n",
+       "      <th>difference</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>borough</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>BK</td>\n",
+       "      <td>337889</td>\n",
+       "      <td>341562.0</td>\n",
+       "      <td>3673.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>BX</td>\n",
+       "      <td>106361</td>\n",
+       "      <td>106970.0</td>\n",
+       "      <td>609.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>MN</td>\n",
+       "      <td>46464</td>\n",
+       "      <td>46869.0</td>\n",
+       "      <td>405.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>QN</td>\n",
+       "      <td>467159</td>\n",
+       "      <td>470572.0</td>\n",
+       "      <td>3413.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>SI</td>\n",
+       "      <td>139175</td>\n",
+       "      <td>135606.0</td>\n",
+       "      <td>-3569.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         numbldgs  new_numbldgs  difference\n",
+       "borough                                    \n",
+       "BK         337889      341562.0      3673.0\n",
+       "BX         106361      106970.0       609.0\n",
+       "MN          46464       46869.0       405.0\n",
+       "QN         467159      470572.0      3413.0\n",
+       "SI         139175      135606.0     -3569.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "borough_before_and_after = pd.merge(borough_numbldgs, borough_new_numbldgs, how='inner', on='borough').fillna(0)\n",
+    "borough_before_and_after['difference'] = borough_before_and_after['new_numbldgs'] - borough_before_and_after['numbldgs']\n",
+    "borough_before_and_after"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
