add assessed and exempt figures to ownername spreadsheet

--- a/numbldgs 2020-03/notebooks/NumBldgs from Building Footprints.ipynb
+++ b/numbldgs 2020-03/notebooks/NumBldgs from Building Footprints.ipynb
@@ -1205,6 +1205,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Assess changes by borough"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What is the total number of buildings recorded on PLUTO today?"
    ]
   },
