update notebook, sql file, and documentation

--- a/yearbuilt 2020-02/notebooks/YearBuilt From Housing.ipynb
+++ b/yearbuilt 2020-02/notebooks/YearBuilt From Housing.ipynb
@@ -565,253 +565,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bbl</th>\n",
-       "      <th>address</th>\n",
-       "      <th>yearbuilt</th>\n",
-       "      <th>numbldgs</th>\n",
-       "      <th>job_type</th>\n",
-       "      <th>job_status</th>\n",
-       "      <th>occupancy_year</th>\n",
-       "      <th>geom</th>\n",
-       "      <th>mpluto_bbl</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>2023150014</td>\n",
-       "      <td>313 ALEXANDER AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
-       "      <td>2023150014</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2038780020</td>\n",
-       "      <td>1332 TAYLOR AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
-       "      <td>2038780020</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>2054110317</td>\n",
-       "      <td>3151 GRISWOLD AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>2057340177</td>\n",
-       "      <td>NETHERLAND AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
-       "      <td>2057340177</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>3015037504</td>\n",
-       "      <td>1668 BROADWAY</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
-       "      <td>3015037504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>61</td>\n",
-       "      <td>5034810047</td>\n",
-       "      <td>721 LIBERTY AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
-       "      <td>5034810047</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>62</td>\n",
-       "      <td>5034810048</td>\n",
-       "      <td>719 LIBERTY AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
-       "      <td>5034810048</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>63</td>\n",
-       "      <td>5034810049</td>\n",
-       "      <td>717 LIBERTY AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
-       "      <td>5034810049</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>64</td>\n",
-       "      <td>5037960024</td>\n",
-       "      <td>540 HUNTER AVENUE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>65</td>\n",
-       "      <td>5038820014</td>\n",
-       "      <td>264 GRIMSBY STREET</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>New Building</td>\n",
-       "      <td>Complete</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
-       "      <td>5038820014</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>66 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           bbl               address  yearbuilt  numbldgs      job_type  \\\n",
-       "0   2023150014  313 ALEXANDER AVENUE          0         1  New Building   \n",
-       "1   2038780020    1332 TAYLOR AVENUE          0         1  New Building   \n",
-       "2   2054110317  3151 GRISWOLD AVENUE          0         1  New Building   \n",
-       "3   2057340177     NETHERLAND AVENUE          0         1  New Building   \n",
-       "4   3015037504         1668 BROADWAY          0         1  New Building   \n",
-       "..         ...                   ...        ...       ...           ...   \n",
-       "61  5034810047    721 LIBERTY AVENUE          0         1  New Building   \n",
-       "62  5034810048    719 LIBERTY AVENUE          0         1  New Building   \n",
-       "63  5034810049    717 LIBERTY AVENUE          0         1  New Building   \n",
-       "64  5037960024     540 HUNTER AVENUE          0         1  New Building   \n",
-       "65  5038820014    264 GRIMSBY STREET          0         1  New Building   \n",
-       "\n",
-       "   job_status occupancy_year  \\\n",
-       "0    Complete           2018   \n",
-       "1    Complete           2017   \n",
-       "2    Complete           2016   \n",
-       "3    Complete           2012   \n",
-       "4    Complete           2016   \n",
-       "..        ...            ...   \n",
-       "61   Complete           2011   \n",
-       "62   Complete           2011   \n",
-       "63   Complete           2011   \n",
-       "64   Complete           2017   \n",
-       "65   Complete           2019   \n",
-       "\n",
-       "                                                 geom  mpluto_bbl  \n",
-       "0   0106000020D70800000100000001030000000100000005...  2023150014  \n",
-       "1   0106000020D70800000100000001030000000100000006...  2038780020  \n",
-       "2   0106000020D70800000100000001030000000100000006...        None  \n",
-       "3   0106000020D70800000100000001030000000100000005...  2057340177  \n",
-       "4   0106000020D70800000100000001030000000100000005...  3015037504  \n",
-       "..                                                ...         ...  \n",
-       "61  0106000020D70800000100000001030000000100000006...  5034810047  \n",
-       "62  0106000020D70800000100000001030000000100000005...  5034810048  \n",
-       "63  0106000020D70800000100000001030000000100000006...  5034810049  \n",
-       "64  0106000020D70800000100000001030000000100000005...        None  \n",
-       "65  0106000020D70800000100000001030000000100000005...  5038820014  \n",
-       "\n",
-       "[66 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with_footprints = pd.read_sql_query('''WITH new_buildings AS (\n",
-    "\tSELECT CAST(p.bbl AS TEXT),\n",
-    "\taddress,\n",
-    "\tyearbuilt,\n",
-    "\tnumbldgs,\n",
-    "\tjob_type,\n",
-    "\tjob_status,\n",
-    "\tSUBSTRING(date_complete, 1, 4) AS occupancy_year,\n",
-    "\tgeom\n",
-    "\tFROM dcp.pluto201 p, dcp.housing h\n",
-    "\tWHERE CAST(p.bbl AS TEXT) = h.bbl\n",
-    "\tAND numbldgs = 1\n",
-    "\tAND yearbuilt = 0\n",
-    "\tAND h.job_type = 'New Building'\n",
-    "\tAND h.job_status = 'Complete'\n",
+    "SELECT CAST(p.bbl AS TEXT) as bbl,\n",
+    "\tp.address,\n",
+    "\tp.yearbuilt,\n",
+    "\tp.numbldgs,\n",
+    "\th.job_type,\n",
+    "\th.job_status,\n",
+    "\tSUBSTRING(h.date_complete,1,4) AS status_year,\n",
+    "\tf.mpluto_bbl,\n",
+    "\tp.geom\n",
+    "\tFROM dcp.housing h, dcp.pluto201 p\n",
+    "\tLEFT JOIN dcp.footprints f\n",
+    "\tON CAST(p.bbl AS TEXT) = f.mpluto_bbl\n",
+    "\tWHERE job_type = 'New Building'\n",
+    "\tAND job_status = 'Complete'\n",
     "\tAND h.date_complete = (SELECT MAX(date_complete)\n",
-    "\t\t\t\t\t   FROM dcp.housing h1\n",
-    "\t\t\t\t\t   WHERE h1.bbl = CAST(p.bbl AS TEXT)\n",
-    "\t\t\t\t\t   AND h1.job_type = 'New Building'\n",
-    "\t\t\t\t\t   AND h1.job_status = 'Complete')\n",
-    "\tORDER BY p.bbl)\n",
-    "SELECT DISTINCT n.*, f.mpluto_bbl\n",
+    "\t\t\t\t\t\t\tFROM dcp.housing h1\n",
+    "\t\t\t\t\t\t\tWHERE h1.bbl = h.bbl\n",
+    "\t\t\t\t\t\t\tAND h1.job_type = h.job_type\n",
+    "\t\t\t\t\t\t\tAND h1.job_status = h.job_status)\n",
+    "\tAND CAST(p.bbl AS TEXT) = h.bbl\n",
+    "  AND p.yearbuilt = 0\n",
+    "  AND p.numbldgs = 1\n",
+    "), demolitions AS (\n",
+    "\tSELECT n.bbl,\n",
+    "\tn.address,\n",
+    "\tn.yearbuilt,\n",
+    "\tn.numbldgs,\n",
+    "\th.job_type,\n",
+    "\th.job_status,\n",
+    "\tSUBSTRING(h.date_filed,7,4) AS status_year,\n",
+    "\tf.mpluto_bbl,\n",
+    "\tn.geom\n",
+    "\tFROM dcp.housing h, new_buildings n\n",
+    "\tLEFT JOIN dcp.footprints f\n",
+    "\tON CAST(n.bbl AS TEXT) = f.mpluto_bbl\n",
+    "\tWHERE h.job_type = 'Demolition'\n",
+    "\tAND h.job_status = 'Complete (demolition)'\n",
+    "\tAND h.date_filed = (SELECT MAX(h1.date_filed)\n",
+    "\t\t\t\t\t\t\tFROM dcp.housing h1\n",
+    "\t\t\t\t\t\t\tWHERE h1.bbl = h.bbl\n",
+    "\t\t\t\t\t\t\tAND h1.job_type = h.job_type\n",
+    "\t\t\t\t\t\t\tAND h1.job_status = h.job_status)\n",
+    "\tAND n.bbl = h.bbl\n",
+    ")\n",
+    "SELECT DISTINCT n.bbl,\n",
+    "\tn.address,\n",
+    "\tn.yearbuilt,\n",
+    "\tn.numbldgs,\n",
+    "\tn.job_type,\n",
+    "\tn.job_status,\n",
+    "\tn.status_year,\n",
+    "\tn.mpluto_bbl,\n",
+    "\tn.geom\n",
     "FROM new_buildings n\n",
-    "LEFT JOIN dcp.footprints f\n",
-    "ON n.bbl = f.mpluto_bbl;''',cnx)\n",
+    "UNION ALL\n",
+    "SELECT d.bbl,\n",
+    "\td.address,\n",
+    "\td.yearbuilt,\n",
+    "\td.numbldgs,\n",
+    "\td.job_type,\n",
+    "\td.job_status,\n",
+    "\td.status_year,\n",
+    "\td.mpluto_bbl,\n",
+    "\td.geom\n",
+    "FROM demolitions d\n",
+    "ORDER BY 1, 5, 6;''',cnx)\n",
     "with_footprints"
    ]
   },
