--- a/yearbuilt 2020-02/notebooks/YearBuilt From Housing.ipynb
+++ b/yearbuilt 2020-02/notebooks/YearBuilt From Housing.ipynb
@@ -565,9 +565,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bbl</th>\n",
+       "      <th>address</th>\n",
+       "      <th>yearbuilt</th>\n",
+       "      <th>numbldgs</th>\n",
+       "      <th>job_type</th>\n",
+       "      <th>job_status</th>\n",
+       "      <th>status_year</th>\n",
+       "      <th>mpluto_bbl</th>\n",
+       "      <th>geom</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2023150014</td>\n",
+       "      <td>313 ALEXANDER AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>2023150014</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2038780020</td>\n",
+       "      <td>1332 TAYLOR AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Demolition</td>\n",
+       "      <td>Complete (demolition)</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2038780020</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2038780020</td>\n",
+       "      <td>1332 TAYLOR AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>2038780020</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>2054110317</td>\n",
+       "      <td>3151 GRISWOLD AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2057340177</td>\n",
+       "      <td>NETHERLAND AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>2057340177</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>76</td>\n",
+       "      <td>5034810049</td>\n",
+       "      <td>717 LIBERTY AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>5034810049</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000006...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>77</td>\n",
+       "      <td>5037960024</td>\n",
+       "      <td>540 HUNTER AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Demolition</td>\n",
+       "      <td>Complete (demolition)</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>78</td>\n",
+       "      <td>5037960024</td>\n",
+       "      <td>540 HUNTER AVENUE</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>79</td>\n",
+       "      <td>5038820014</td>\n",
+       "      <td>264 GRIMSBY STREET</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Demolition</td>\n",
+       "      <td>Complete (demolition)</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>5038820014</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>80</td>\n",
+       "      <td>5038820014</td>\n",
+       "      <td>264 GRIMSBY STREET</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>New Building</td>\n",
+       "      <td>Complete</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>5038820014</td>\n",
+       "      <td>0106000020D70800000100000001030000000100000005...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           bbl               address  yearbuilt  numbldgs      job_type  \\\n",
+       "0   2023150014  313 ALEXANDER AVENUE          0         1  New Building   \n",
+       "1   2038780020    1332 TAYLOR AVENUE          0         1    Demolition   \n",
+       "2   2038780020    1332 TAYLOR AVENUE          0         1  New Building   \n",
+       "3   2054110317  3151 GRISWOLD AVENUE          0         1  New Building   \n",
+       "4   2057340177     NETHERLAND AVENUE          0         1  New Building   \n",
+       "..         ...                   ...        ...       ...           ...   \n",
+       "76  5034810049    717 LIBERTY AVENUE          0         1  New Building   \n",
+       "77  5037960024     540 HUNTER AVENUE          0         1    Demolition   \n",
+       "78  5037960024     540 HUNTER AVENUE          0         1  New Building   \n",
+       "79  5038820014    264 GRIMSBY STREET          0         1    Demolition   \n",
+       "80  5038820014    264 GRIMSBY STREET          0         1  New Building   \n",
+       "\n",
+       "               job_status status_year  mpluto_bbl  \\\n",
+       "0                Complete        2018  2023150014   \n",
+       "1   Complete (demolition)        2011  2038780020   \n",
+       "2                Complete        2017  2038780020   \n",
+       "3                Complete        2016        None   \n",
+       "4                Complete        2012  2057340177   \n",
+       "..                    ...         ...         ...   \n",
+       "76               Complete        2011  5034810049   \n",
+       "77  Complete (demolition)        2015        None   \n",
+       "78               Complete        2017        None   \n",
+       "79  Complete (demolition)        2015  5038820014   \n",
+       "80               Complete        2019  5038820014   \n",
+       "\n",
+       "                                                 geom  \n",
+       "0   0106000020D70800000100000001030000000100000005...  \n",
+       "1   0106000020D70800000100000001030000000100000006...  \n",
+       "2   0106000020D70800000100000001030000000100000006...  \n",
+       "3   0106000020D70800000100000001030000000100000006...  \n",
+       "4   0106000020D70800000100000001030000000100000005...  \n",
+       "..                                                ...  \n",
+       "76  0106000020D70800000100000001030000000100000006...  \n",
+       "77  0106000020D70800000100000001030000000100000005...  \n",
+       "78  0106000020D70800000100000001030000000100000005...  \n",
+       "79  0106000020D70800000100000001030000000100000005...  \n",
+       "80  0106000020D70800000100000001030000000100000005...  \n",
+       "\n",
+       "[81 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with_footprints = pd.read_sql_query('''WITH new_buildings AS (\n",
     "SELECT CAST(p.bbl AS TEXT) as bbl,\n",
